@@ -37,4 +37,5 @@ OVERALL TODO
    Update VERSION and REVISION in CMakeLists.txt
    
 * v0.0.5-255 (24 Jan. 2017 - ???) SLOC ?,??? FT ??:?? UT ?
+- Handle ModalDialog button events
 - Add the modal GUI layout
